2011-09-30 mmichaud <michael.michaud@free.fr>
    * ShapefileWriter now prompt the user to accept or not to truncate fields
      with more than 255 characters.
      A timestamp is used to avoid prompting the user if he has already accept
      to truncate for less than 30 s (useful for shapefile writing batches)
    
2011-09-27 mmichaud <michael.michaud@free.fr>
    * New BufferPlugIn exposing all the parameters of JTS 1.12 library
      Uses classes and methods of the new MultiInputDialog framework
    * Add a patch to QueryDialog and LayerNameRenderer to get the Layer Color
      in the Simple Query tool

2011-09-25 mmichaud <michael.michaud@free.fr>
    * In MultiInputDialog showing Layer list in a JComboBox, selected
      layer was unreadable (black foreground and dard background)
      This should be fixed (may be due to a workaround Larry did to solve an old
      JRE problem)

2011-09-25 ede
  bugfix 2728360: Layer operations break the Undo Chain
  actually all plugins based on AbstractPlugIn have that behaviour if the do
    not reportNothingToUndoYet()
  disabled this in UndoableEditReceiver, now these plugins are simply ignored
    by undo

2011-09-24 mmichaud <michael.michaud@free.fr>
  * Refactoring of Selection package : 
    - use generics in selection related classes instead of OpenJUMP CollectionMap
    - improve memory usage (initialize all lists with an array of size 1 instead
      of the default array size)
    - fix old bug 2792806
    
    Changed classes are :
    -com.vividsolutions.jump.workbench.ui.SelectionManager
    -com.vividsolutions.jump.workbench.ui.AbstractSelection
    -com.vividsolutions.jump.workbench.ui.FeatureSelection
    -com.vividsolutions.jump.workbench.ui.PartSelection
    -com.vividsolutions.jump.workbench.ui.LineStringSelection
    -com.vividsolutions.jump.workbench.ui.EditTransaction
    -com.vividsolutions.jump.workbench.ui.AbstractSelection