@@ -529,7 +529,7 @@ org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.directory-cho
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.do-not-save = Ne pas enregistrer ces couches sur le disque dur
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.every-layer-has-a-datasource = Toutes les couches poss\u00e8dent d\u00e9j\u00e0 une source de donn\u00e9es
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.hover-the-label-to-see-the-list = (survoler lentement le texte pour voir la liste) 
-org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.layers-without-datasource = Il y a {0} nouvelles couches sans source de donn\u00e9es
+org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.layers-without-datasource = Il y a {0} nouvelle(s) couche(s) sans source de donn\u00e9es
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.layers-without-datasource-management = Gestion des couches sans source de donn\u00e9es
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.save-as-jml = Enregistrer ces couches au format JML
 org.openjump.core.ui.plugin.file.SaveLayersWithoutDataSourcePlugIn.save-as-shp = Enregistrer ces couches au format shapefile
